--- a/Cliente/comportamiento_cliente_jl.ipynb
+++ b/Cliente/comportamiento_cliente_jl.ipynb
@@ -1182,6 +1182,15 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "id": "2fb297de",
+   "metadata": {},
+   "source": [
+    "### Parte de Jorge.\n",
+    "Mdia de gasto por cliente."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "cbc7f3a3",
