--- a/Cliente/analisis_cliente.ipynb
+++ b/Cliente/analisis_cliente.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "4f18afe0",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "e83d2a50",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "7efd85fa",
    "metadata": {},
    "outputs": [
@@ -142,7 +142,7 @@
        "4  2010-12-01 08:26:00       3.39     17850.0  United Kingdom  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,8 +153,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "id": "951d3e32",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 541909 entries, 0 to 541908\n",
+      "Data columns (total 8 columns):\n",
+      " #   Column       Non-Null Count   Dtype  \n",
+      "---  ------       --------------   -----  \n",
+      " 0   InvoiceNo    541909 non-null  object \n",
+      " 1   StockCode    541909 non-null  object \n",
+      " 2   Description  540455 non-null  object \n",
+      " 3   Quantity     541909 non-null  int64  \n",
+      " 4   InvoiceDate  541909 non-null  object \n",
+      " 5   UnitPrice    541909 non-null  float64\n",
+      " 6   CustomerID   406829 non-null  float64\n",
+      " 7   Country      541909 non-null  object \n",
+      "dtypes: float64(2), int64(1), object(5)\n",
+      "memory usage: 33.1+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "fa2d38c0",
+   "id": "97f231ce",
    "metadata": {},
    "outputs": [],
    "source": []
