--- a/Cliente/analisis_cliente.ipynb
+++ b/Cliente/analisis_cliente.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "4f18afe0",
    "metadata": {},
    "outputs": [],
@@ -21,17 +21,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "e83d2a50",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('online_retail.csv')"
+    "# Update the file path to the correct location\n",
+    "df = pd.read_csv('/Users/jluisfeltrer/Desktop/online_retail/online_retail.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "7efd85fa",
    "metadata": {},
    "outputs": [
@@ -153,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "951d3e32",
    "metadata": {},
    "outputs": [
@@ -164,17 +165,17 @@
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 541909 entries, 0 to 541908\n",
       "Data columns (total 8 columns):\n",
-      " #   Column       Non-Null Count   Dtype  \n",
-      "---  ------       --------------   -----  \n",
-      " 0   InvoiceNo    541909 non-null  object \n",
-      " 1   StockCode    541909 non-null  object \n",
-      " 2   Description  540455 non-null  object \n",
-      " 3   Quantity     541909 non-null  int64  \n",
-      " 4   InvoiceDate  541909 non-null  object \n",
-      " 5   UnitPrice    541909 non-null  float64\n",
-      " 6   CustomerID   406829 non-null  float64\n",
-      " 7   Country      541909 non-null  object \n",
-      "dtypes: float64(2), int64(1), object(5)\n",
+      " #   Column       Non-Null Count   Dtype         \n",
+      "---  ------       --------------   -----         \n",
+      " 0   InvoiceNo    541909 non-null  object        \n",
+      " 1   StockCode    541909 non-null  object        \n",
+      " 2   Description  540455 non-null  object        \n",
+      " 3   Quantity     541909 non-null  int64         \n",
+      " 4   InvoiceDate  541909 non-null  datetime64[ns]\n",
+      " 5   UnitPrice    541909 non-null  float64       \n",
+      " 6   CustomerID   406829 non-null  float64       \n",
+      " 7   Country      541909 non-null  object        \n",
+      "dtypes: datetime64[ns](1), float64(2), int64(1), object(4)\n",
       "memory usage: 33.1+ MB\n"
      ]
     }
@@ -185,8 +186,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "97f231ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# estandarizar el formato de la columna 'InvoiceDate'\n",
+    "df['InvoiceDate'] = pd.to_datetime(df['InvoiceDate'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "349a8b17",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Estandarizar el formato de la columna 'CustomerID' a int\n",
+    "df['CustomerID'] = df['CustomerID'].astype('Int64')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "4345f09e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Crear un dataframe con los valores nulos de 'CustomerID'\n",
+    "df_nulls = df[df['CustomerID'].isnull()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "e1e0329c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El numero de columnas con valores nulos en CustomerID es: 135080\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_nulls.shape\n",
+    "print(f'El numero de columnas con valores nulos en CustomerID es: {df_nulls.shape[0]}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c31ffc92",
    "metadata": {},
    "outputs": [],
    "source": []
