--- a/Cliente/analisis_cliente.ipynb
+++ b/Cliente/analisis_cliente.ipynb
@@ -827,6 +827,310 @@
     "3. Existen 10.624 datos con cantidades negativo. Si usamos estos el InvoiceNo para rellenar el CustomerID, no vamos a poder determinar cual compra fue una devolucion o una compra efectiva, dado que cada invoiceNo es diferente. \n",
     "4. Se podria crear una nueva columna donde se agrupen los valores cuya descripcion y valor coincida, quitando el negativo, solo para ver los que son devolucion antes de rellenar los valores de CustomerID\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "4928ddd4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 135080 entries, 622 to 541540\n",
+      "Data columns (total 8 columns):\n",
+      " #   Column       Non-Null Count   Dtype         \n",
+      "---  ------       --------------   -----         \n",
+      " 0   InvoiceNo    135080 non-null  object        \n",
+      " 1   StockCode    135080 non-null  object        \n",
+      " 2   Description  133626 non-null  object        \n",
+      " 3   Quantity     135080 non-null  int64         \n",
+      " 4   InvoiceDate  135080 non-null  datetime64[ns]\n",
+      " 5   UnitPrice    135080 non-null  float64       \n",
+      " 6   CustomerID   0 non-null       Int64         \n",
+      " 7   Country      135080 non-null  object        \n",
+      "dtypes: Int64(1), datetime64[ns](1), float64(1), int64(1), object(4)\n",
+      "memory usage: 9.4+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_nulls.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "10119ea7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 25900 entries, 536365 to C581569\n",
+      "Data columns (total 7 columns):\n",
+      " #   Column       Non-Null Count  Dtype\n",
+      "---  ------       --------------  -----\n",
+      " 0   StockCode    25900 non-null  int64\n",
+      " 1   Description  25900 non-null  int64\n",
+      " 2   Quantity     25900 non-null  int64\n",
+      " 3   InvoiceDate  25900 non-null  int64\n",
+      " 4   UnitPrice    25900 non-null  int64\n",
+      " 5   CustomerID   25900 non-null  int64\n",
+      " 6   Country      25900 non-null  int64\n",
+      "dtypes: int64(7)\n",
+      "memory usage: 1.6+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Agrupar los datos por la columna 'InvoiceNo' y contar valores unicos\n",
+    "df_grouped = df.groupby('InvoiceNo').nunique().info()\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "15572f88",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# crea un nuevo df con las columnas 'InvoiceNo' y 'CustomerID'\n",
+    "df_invoice_customer = df[['InvoiceNo', 'CustomerID']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "55ffda31",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 541909 entries, 0 to 541908\n",
+      "Data columns (total 2 columns):\n",
+      " #   Column      Non-Null Count   Dtype \n",
+      "---  ------      --------------   ----- \n",
+      " 0   InvoiceNo   541909 non-null  object\n",
+      " 1   CustomerID  406829 non-null  Int64 \n",
+      "dtypes: Int64(1), object(1)\n",
+      "memory usage: 8.8+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_invoice_customer.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15b9152d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/kw/4wrh588x7g5_4x1y7pjyp2c40000gn/T/ipykernel_36374/3415835193.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_invoice_customer['CustomerID'] = df_invoice_customer.groupby('InvoiceNo')['CustomerID'].transform(lambda x: x.fillna(x.mode()[0] if not x.mode().empty else np.nan))\n"
+     ]
+    }
+   ],
+   "source": [
+    "# "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "b31c545d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 541909 entries, 0 to 541908\n",
+      "Data columns (total 2 columns):\n",
+      " #   Column      Non-Null Count   Dtype \n",
+      "---  ------      --------------   ----- \n",
+      " 0   InvoiceNo   541909 non-null  object\n",
+      " 1   CustomerID  406829 non-null  Int64 \n",
+      "dtypes: Int64(1), object(1)\n",
+      "memory usage: 8.8+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_invoice_customer.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "2754f8e5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# crea un df con las columnas 'InvoiceNo', 'CustomerID', Quantyty y UnitPrice\n",
+    "df_invoice_details = df[['InvoiceNo', 'CustomerID', 'Quantity', 'UnitPrice']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "c221e895",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/kw/4wrh588x7g5_4x1y7pjyp2c40000gn/T/ipykernel_36374/1990704250.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_invoice_details['TotalPrice'] = df_invoice_details['Quantity'] * df_invoice_details['UnitPrice']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Agrega una nueva columna 'TotalPrice' que sea el resultado de multiplicar 'Quantity' por 'UnitPrice'\n",
+    "df_invoice_details['TotalPrice'] = df_invoice_details['Quantity'] * df_invoice_details['UnitPrice']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "5adde0f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 541909 entries, 0 to 541908\n",
+      "Data columns (total 5 columns):\n",
+      " #   Column      Non-Null Count   Dtype  \n",
+      "---  ------      --------------   -----  \n",
+      " 0   InvoiceNo   541909 non-null  object \n",
+      " 1   CustomerID  406829 non-null  Int64  \n",
+      " 2   Quantity    541909 non-null  int64  \n",
+      " 3   UnitPrice   541909 non-null  float64\n",
+      " 4   TotalPrice  541909 non-null  float64\n",
+      "dtypes: Int64(1), float64(2), int64(1), object(1)\n",
+      "memory usage: 21.2+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_invoice_details.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "9997b067",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/kw/4wrh588x7g5_4x1y7pjyp2c40000gn/T/ipykernel_36374/482626065.py:1: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "  df['CustomerID'] = df.groupby('InvoiceNo')['CustomerID'].transform(lambda x: x.fillna(method='ffill').fillna(method='bfill'))\n"
+     ]
+    }
+   ],
+   "source": [
+    "df['CustomerID'] = df.groupby('InvoiceNo')['CustomerID'].transform(lambda x: x.fillna(method='ffill').fillna(method='bfill'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "3c7b0baa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Datos faltantes restantes: 135080\n"
+     ]
+    }
+   ],
+   "source": [
+    "missing_count = df['CustomerID'].isnull().sum()\n",
+    "print(f\"Datos faltantes restantes: {missing_count}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "019c6b50",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['CustomerID'] = df.groupby('InvoiceNo')['CustomerID'].transform(lambda x: x.ffill().bfill())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "81ddaf12",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 541909 entries, 0 to 541908\n",
+      "Data columns (total 8 columns):\n",
+      " #   Column       Non-Null Count   Dtype         \n",
+      "---  ------       --------------   -----         \n",
+      " 0   InvoiceNo    541909 non-null  object        \n",
+      " 1   StockCode    541909 non-null  object        \n",
+      " 2   Description  540455 non-null  object        \n",
+      " 3   Quantity     541909 non-null  int64         \n",
+      " 4   InvoiceDate  541909 non-null  datetime64[ns]\n",
+      " 5   UnitPrice    541909 non-null  float64       \n",
+      " 6   CustomerID   406829 non-null  Int64         \n",
+      " 7   Country      541909 non-null  object        \n",
+      "dtypes: Int64(1), datetime64[ns](1), float64(1), int64(1), object(4)\n",
+      "memory usage: 33.6+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "103f13f4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
