--- a/Cliente/analisis_cliente.ipynb
+++ b/Cliente/analisis_cliente.ipynb
@@ -933,29 +933,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "15b9152d",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/kw/4wrh588x7g5_4x1y7pjyp2c40000gn/T/ipykernel_36374/3415835193.py:2: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df_invoice_customer['CustomerID'] = df_invoice_customer.groupby('InvoiceNo')['CustomerID'].transform(lambda x: x.fillna(x.mode()[0] if not x.mode().empty else np.nan))\n"
-     ]
-    }
-   ],
-   "source": [
-    "# "
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 46,
    "id": "b31c545d",
    "metadata": {},
@@ -1084,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 58,
    "id": "019c6b50",
    "metadata": {},
    "outputs": [],
@@ -1094,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 59,
    "id": "81ddaf12",
    "metadata": {},
    "outputs": [
@@ -1126,8 +1103,107 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 63,
+   "id": "95835f6b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(77)"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Cuantos valores de descuento hay en la columna descripcion de df\n",
+    "df['Description'].str.contains('discount', case=False, na=False).sum()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "fb925f21",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Agregar una columna en df que indique el total price multiplicando el valor en 'Quantity' por 'UnitPrice'\n",
+    "df['TotalPrice'] = df['Quantity'] * df['UnitPrice']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "7edb6740",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El total de precios con descuento es: -5696.219999999999\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Suma el total price de las los datos que contienen discount en la columna 'Description'\n",
+    "total_discount_price = df[df['Description'].str.contains('discount', case=False, na=False)]['TotalPrice'].sum()\n",
+    "print(f\"El total de precios con descuento es: {total_discount_price}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "bc639549",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Eliminar todas las filas que contienen 'discount' en la columna 'Description'\n",
+    "df_no_discount = df[~df['Description'].str.contains('discount', case=False, na=False)]\n",
+    "# Guardar el DataFrame sin descuentos en un nuevo archivo CSV\n",
+    "df_no_discount.to_csv('online_retail_no_discount.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "8f5303f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 541832 entries, 0 to 541831\n",
+      "Data columns (total 9 columns):\n",
+      " #   Column       Non-Null Count   Dtype  \n",
+      "---  ------       --------------   -----  \n",
+      " 0   InvoiceNo    541832 non-null  object \n",
+      " 1   StockCode    541832 non-null  object \n",
+      " 2   Description  540378 non-null  object \n",
+      " 3   Quantity     541832 non-null  int64  \n",
+      " 4   InvoiceDate  541832 non-null  object \n",
+      " 5   UnitPrice    541832 non-null  float64\n",
+      " 6   CustomerID   406752 non-null  float64\n",
+      " 7   Country      541832 non-null  object \n",
+      " 8   TotalPrice   541832 non-null  float64\n",
+      "dtypes: float64(3), int64(1), object(5)\n",
+      "memory usage: 37.2+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "pd.read_csv('online_retail_no_discount.csv').info()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "103f13f4",
+   "id": "478e7a5c",
    "metadata": {},
    "outputs": [],
    "source": []
