--- a/Cliente/analisis_cliente.ipynb
+++ b/Cliente/analisis_cliente.ipynb
@@ -1165,6 +1165,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "867b1d75",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exportar df0 a un archivo CSV\n",
+    "df0.to_csv('online_retail_cleaned.csv', index=False)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "e94d51bb",
    "metadata": {},
